Archive2/eb/cd0c2c40b9cd86/output
main.cpp:22:6: error: variable has incomplete type 'void'
void show(json_value const &jv)
     ^
main.cpp:22:11: error: use of undeclared identifier 'json_value'
void show(json_value const &jv)
          ^
main.cpp:22:32: error: expected ';' after top level declarator
void show(json_value const &jv)
                               ^
                               ;
3 errors generated.
